--- a/gtk_style/sass/screen.scss
+++ b/gtk_style/sass/screen.scss
@@ -1,8 +1,4 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-@import "compass/css3";
+
 
 body{
 	width: 80%;
@@ -47,5 +43,11 @@ body{
       font-family: monospace;
   	}
  
+  }
+}
+ul.no-bullets{
+  list-style-type: none;
+  li{
+    margin-left: -2.5em;
   }
 }
