--- a/gtk_style/sass/screen.scss
+++ b/gtk_style/sass/screen.scss
@@ -27,7 +27,7 @@ body{
       max-width: 30%;
       border: 1px solid gray;
     }
-
+      
   	.note{
   		color: #333333;
   		font-style: italic;
@@ -44,10 +44,35 @@ body{
   	}
  
   }
+  .comic_wrap{
+    float: right;
+    max-width: 40%;
+    margin-left: 3em;
+    .caption{
+      font-size: 0.85em;
+      font-style: italic;
+    }
+  }
+  
 }
 ul.no-bullets{
   list-style-type: none;
   li{
     margin-left: -2.5em;
+  }
+}
+.profiles{
+  display: flex;
+  justify-content: space-between;
+  li{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+  
+  }
+  .image_wrap{
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
   }
 }
