--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -29,8 +29,27 @@ body {
       background: #F0F2F4;
       overflow: auto;
       font-family: monospace; }
+  body .comic_wrap {
+    float: right;
+    max-width: 40%;
+    margin-left: 3em; }
+    body .comic_wrap .caption {
+      font-size: 0.85em;
+      font-style: italic; }
 
 ul.no-bullets {
   list-style-type: none; }
   ul.no-bullets li {
     margin-left: -2.5em; }
+
+.profiles {
+  display: flex;
+  justify-content: space-between; }
+  .profiles li {
+    display: flex;
+    flex-direction: column;
+    width: 30%; }
+  .profiles .image_wrap {
+    width: 100%;
+    height: 300px;
+    overflow: hidden; }
