--- a/gtk_style/sass/screen.scss
+++ b/gtk_style/sass/screen.scss
@@ -63,16 +63,30 @@ ul.no-bullets{
 }
 .profiles{
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  padding-left: 0;
   li{
     display: flex;
     flex-direction: column;
-    width: 30%;
+    margin-bottom: 2em;
+  }
+  @media all and (min-width: 700px){
+      flex-direction: row;
+      justify-content: space-between;
+      li{
+        width: 30%;
+      }
   
   }
   .image_wrap{
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
+      @media all and (min-width: 700px){
+        width: 100%;
+        height: 300px;
+        overflow: hidden;
+      }
+  }
+  .pronouns{
+    font-style: italic;
   }
 }
+
