--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -44,12 +44,22 @@ ul.no-bullets {
 
 .profiles {
   display: flex;
-  justify-content: space-between; }
+  flex-direction: column;
+  padding-left: 0; }
   .profiles li {
     display: flex;
     flex-direction: column;
-    width: 30%; }
-  .profiles .image_wrap {
-    width: 100%;
-    height: 300px;
-    overflow: hidden; }
+    margin-bottom: 2em; }
+  @media all and (min-width: 700px) {
+    .profiles {
+      flex-direction: row;
+      justify-content: space-between; }
+      .profiles li {
+        width: 30%; } }
+  @media all and (min-width: 700px) {
+    .profiles .image_wrap {
+      width: 100%;
+      height: 300px;
+      overflow: hidden; } }
+  .profiles .pronouns {
+    font-style: italic; }
