--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -11,7 +11,8 @@ body {
     border-bottom: 1px solid gray; }
   body #main {
     margin-top: 0.25em;
-    line-height: 1.5; }
+    line-height: 1.5;
+    font-size: 18px; }
     body #main h4 {
       color: #4d4d4d; }
     body #main .screen_shot {
@@ -30,12 +31,16 @@ body {
       overflow: auto;
       font-family: monospace; }
   body .comic_wrap {
-    float: right;
-    max-width: 40%;
-    margin-left: 3em; }
-    body .comic_wrap .caption {
-      font-size: 0.85em;
-      font-style: italic; }
+    display: none; }
+    @media all and (min-width: 1000px) {
+      body .comic_wrap {
+        float: right;
+        display: block;
+        max-width: 40%;
+        margin-left: 3em; }
+        body .comic_wrap .caption {
+          font-size: 0.85em;
+          font-style: italic; } }
 
 ul.no-bullets {
   list-style-type: none; }
