link to profiles

--- a/gtk_style/sass/screen.scss
+++ b/gtk_style/sass/screen.scss
@@ -25,7 +25,11 @@ body{
 
   	h4{
   		color: #4d4d4d;
-  	}
+    }
+    .bio_link{
+      font-style: italic;
+      font-size: small;
+    }
     .screen_shot{
       max-width: 30%;
       border: 1px solid gray;
