--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -15,6 +15,9 @@ body {
     font-size: 18px; }
     body #main h4 {
       color: #4d4d4d; }
+    body #main .bio_link {
+      font-style: italic;
+      font-size: small; }
     body #main .screen_shot {
       max-width: 30%;
       border: 1px solid gray; }
