add image box shadows

--- a/gtk_style/sass/screen.scss
+++ b/gtk_style/sass/screen.scss
@@ -5,7 +5,9 @@ body{
 	 margin: auto;
   font-family: sans-serif;
 
-
+  img{
+    box-shadow: 0 2px 6px 0 lightgrey;
+   }
   #nav{
   	font-size: 10px;
   	color: gray;
@@ -58,6 +60,8 @@ body{
       display: block;
        max-width: 40%;
        margin-left: 3em;
+       
+       
       .caption{
         font-size: 0.85em;
         font-style: italic;
