--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -2,6 +2,8 @@ body {
   width: 80%;
   margin: auto;
   font-family: sans-serif; }
+  body img {
+    box-shadow: 0 2px 6px 0 lightgrey; }
   body #nav {
     font-size: 10px;
     color: gray;
