--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -73,3 +73,26 @@ ul.no-bullets {
       overflow: hidden; } }
   .profiles .pronouns {
     font-style: italic; }
+
+.install .instruct {
+  counter-reset: section;
+  padding-left: 0; }
+  .install .instruct .step::before {
+    counter-increment: section;
+    content: counter(section); }
+  .install .instruct .step {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1em; }
+    .install .instruct .step .text {
+      margin-left: 0.5em;
+      flex-grow: 2;
+      min-width: 50%; }
+    .install .instruct .step img {
+      margin-left: 1em; }
+
+.install .example {
+  margin: 0.5em 0 !important; }
+
+.install .homebrew {
+  margin-bottom: 1em; }
