--- a/gtk_style/sass/screen.scss
+++ b/gtk_style/sass/screen.scss
@@ -107,26 +107,34 @@ ul.no-bullets{
 //Install page
 .install{
   .instruct{
-    counter-reset: section; 
     padding-left: 0;
-    //use counter because flexbox will hide ol numbers
-    .step::before{
-      counter-increment: section;                
-      content: counter(section);  
-    }
+    @media all and (min-width: 900px){
+      counter-reset: section; 
+
+      //use counter because flexbox will hide ol numbers
+      .step::before{
+        counter-increment: section;                
+        content: counter(section);  
+      }
+    }  
     .step{
-      display: flex;
-      justify-content: space-between;
       margin-bottom: 3em;
       .text{
-        margin-left: 0.5em;
-        flex-grow: 2;
-        min-width: 50%;
+        margin-bottom: 1em;
       }
-      img{
-        margin-left: 3em;
+      @media all and (min-width: 900px){
+        display: flex;
+        justify-content: space-between;
+        
+        .text{
+          margin-left: 0.5em;
+          flex-grow: 2;
+          min-width: 50%;
+        }
+        img{
+          margin-left: 3em;
+        }
       }
-      
     }
     
   }
