include PDFs for installation instructions

--- a/gtk_style/sass/screen.scss
+++ b/gtk_style/sass/screen.scss
@@ -142,11 +142,15 @@ ul.no-bullets{
     }
     
   }
+  .download{
+    font-size: smaller;
+  }
   .example{
     margin: 0.5em 0 !important;
   }
   .homebrew{
     margin-bottom: 1em;
   }
+
 }
 
