--- a/gtk_style/stylesheets/screen.css
+++ b/gtk_style/stylesheets/screen.css
@@ -100,6 +100,9 @@ ul.no-bullets {
           margin-left: 3em;
           max-width: none; } }
 
+.install .download {
+  font-size: smaller; }
+
 .install .example {
   margin: 0.5em 0 !important; }
 
